# WenjingOpenImg

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: api_client.rs  batch_generator.rs  config.rs  config_presets.rs  database.rs  main.rs  project.rs
src/api/: api_client.ts  batch.ts  config.ts  database.ts  inspection.ts  preset.ts  project.ts
